Fixed tabs alignment

--- a/JabbR/Content/themes/default/Chat.css
+++ b/JabbR/Content/themes/default/Chat.css
@@ -794,7 +794,7 @@ canvas {
 
 #tabs {
     padding: 0 0 0 0;
-    margin: 0 200px 0 90px;
+    margin: 0 200px 0 110px;
     left: 0;
     right: 160px;
     position: absolute;
